# httl

./: .ccls  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  add-and-commit.py
.github/workflows/: build.yml  cmake.yml
include/ht/: .vim-template:.hpp  cli.hpp  version.h  version.h.inc
include/ht/base/: algorithms.hpp
include/ht/base/algorithms/impl/: all_of.hpp
include/ht/common/: result.hpp
include/ht/concurrency/: get_stop_token.hpp
include/ht/container/: ac_automaton.hpp  avl_tree.hpp  fib_heap.hpp  lru_cache.hpp  named_wrapper.hpp
include/ht/container/impl/: avl_tree_base.hpp  avl_tree_iterator.hpp  circular_deque.hpp  fib_heap_entry.hpp
include/ht/core/: algorithm.hpp  assert.hpp  box.hpp  cli.hpp  cpp_feature.h  hash.hpp  named_wrapper.hpp  result.hpp  scope_guard.hpp  stop_token_utility.hpp  tag_invoke.hpp  type_traits.hpp  type_utils.hpp
include/ht/core/impl/: collect.hpp  for_.hpp  forward_like.hpp  tag_invoke.hpp  type_name.hpp  type_tag.hpp
include/ht/core/reflect/: helpers.hpp  macros.h
include/ht/coroutine/: block_wait.hpp  coroutine.hpp  detached_task.hh  detached_task.hpp  task.hh  task.hpp  type_traits.hpp
include/ht/coroutine/detail/: manual_event.hh
include/ht/coroutine/impl/: coro_handle.hpp  exchange_corotine_handle.hpp  mutex.hpp  task.hpp  task_promise.hpp
include/ht/coroutine/impl/concepts/: concepts.hpp
include/ht/coroutine/impl/network/: read_awaiter.hpp
include/ht/coroutine/tasks/: sync_wait.hh
include/ht/coroutine/traits/: awaitable_traits.hpp  awaiter_type.hpp  coroutine_handle_type.hpp  get_awaiter.hpp
include/ht/coroutine/utils/: sync_wait.hh
include/ht/formatter/impl/: debug_struct.hpp  fwd.hpp  writer.hpp
include/ht/functional/: hash.hpp
include/ht/macro/: cpp_feature.h  expand.hpp  for.h  is_empty.h  select.h  stealer.h  tuple.h
include/ht/macro/detail/: compiler.h  deprecated.h  diagnostic.h  warning.h
include/ht/math/: math.hpp
include/ht/math/impl/: big_integer.hpp  big_integer_storage.hpp  quick_pow.hpp
include/ht/math/impl/bigint/: big_uint.hpp  big_uint_simple_op.hpp
include/ht/memory/: memory_view.hh  memory_view.hpp
include/ht/meta/: meta.hpp
include/ht/meta/cmath/: abs.hpp  gcd.hpp
include/ht/meta/impl/: concat_sv.hpp  for_.hpp  function.hh  function_signature.hpp  has_transparent.hpp  index_sequence_plus.hpp  is_any_of.hh  is_map.hh  is_pair.hh  is_specialization.hh  is_tuple.hpp  same_types.hpp  select_tuple_element.hpp  tuple_slice.hpp  type_slice.hpp  type_tag.hpp  typename.hpp
include/ht/network/: socket.hpp  utility_functions.hpp
include/ht/network/impl/types/: common.hpp  general_addr.hpp  ip4_addr.hpp  ip6_addr.hpp  unix_addr.hpp
include/ht/parser_combinator/: parser_combinator.hpp
include/ht/parser_combinator/impl/: input_stream.hpp  parser.hpp
include/ht/parser_combinator/impl/commons/: char_predict.hpp  combinator_converter.hpp  combinator_many.hpp  combinator_option.hpp  combinator_or.hpp  combinator_plus.hpp  strings.hpp
include/ht/strings/: display.hpp  string_utility.hpp  stringify.hpp
include/ht/strings/display/: refl.hpp  reflect.hpp  variant.hpp
include/ht/strings/impl/: debug_macro.hpp  formatter.hpp  refl_stringify.hpp  stl_debug_stringify.hpp  str_join_impl.hpp  stringify.hpp  variant_stringify.hpp
include/sdt/core/macros/: always_inline.hh
include/sdt/core/trait/: trait.hh
include/sdt/core/trait/impl/: container.hh  copy_insertable.hh  erasable.hh  helpers.hh  iter_traits.hh  send.hh  value.hh
include/sdt/sync/fwd/: mutex_fwd.hh  rwlock_fwd.hh
include/sdt/sync/impl/: lock_guard.hh  mutex.hh
src/ht/container/impl/: avl_tree_base.cpp
src/ht/network/: utility_functions.cpp
test/: .vim-template:.cpp  .vim-template:.hh  CMakeLists.txt  ac-automaton-test.cpp  avl-tree-test.cpp  circular-deque-test.cpp  cli-test.cpp  container_traits.hpp  container_utils.hpp  coroutine-test.cpp  display-test.cpp  fib-heap-test.cpp  lru-test.cpp  memory-view-test.cpp  named-wrapper-test.cpp  network-types-test.cpp  parser-combinator-test.cpp  refl-test.cpp  result-test.cpp  stealer-test.cpp  stringify-test.cpp  type-utils-test.cpp
